--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@ body {
   width: 80%;
   margin: 0 auto;
   font-family: sans-serif;
-  background-color: mediumseagreen;
+  background-color: rebeccapurple;
   color: white;
 
 }
